# FakeNewsDetection

./: .dockerignore  .gitignore  FakeNews_RNN.ipynb  app.py  pyproject.toml
static/: index.css
templates/: index.html
