[project]
name = "fakenews"
version = "0.1.0"
description = "Fake news detection app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "tensorflow>=2.20.0",
    "nltk>=3.9.1",
    "python-multipart>=0.0.20",
    "numpy>=2.3.2",
    "h5py>=3.14.0",
    "jinja2>=3.1.6",
    "aiofiles>=23.2.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4"
]
